<resources>
    <string name="app_name">FitApp</string>
    <string name="novo_usuario">Novo Usuário</string>
    <string name="user_nome">Nome</string>
    <string name="user_sobrenome">Sobrenome</string>
    <string name="user_idade">Idade</string>
    <string name="user_altura">Altura</string>
    <string name="user_peso">Peso</string>
    <string name="user_cadastrar">Cadastrar</string>
    <string name="nova_dieta">Nova Dieta</string>
    <string-array name="refeicao_tipo">
        <item name="cafe_manha">Café da Manhã</item>
        <item name="almoco">Almoco</item>
        <item name="jantar">Jantar</item>
        <item name="outros">Outros</item>
    </string-array>
    <string name="title_activity_nova_refeicao">NovaRefeicao</string>
    <string name="nova_refeicao">Nova Refeicao</string>
    <string name="ver_refs">Ver Refeições</string>
    <string name="title_activity_http_alimento">HttpAlimento</string>
</resources>
